--- a/css/custom.css
+++ b/css/custom.css
@@ -516,84 +516,41 @@ div.cover-text-placeholder{
 ================================
 */
 .nomargin {
-	margin-top: 0px !important;
-	margin-bottom: 0px !important;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
 
-.nomargin-top {
-	margin-top: 0px !important;
-}
+.nomargin-top { margin-top: 0 !important; }
+.nomargin-side { margin-left: 0 !important; margin-right: 0 !important; }
+.center-align { margin-left: auto !important; margin-right: auto !important; }
 
-.nomargin-side {
-	margin-left: 0px !important;
-	margin-right: 0px !important;
-}
+.margin-top-xs { margin-top: 6px  !important; }
+.margin-btm-xs { margin-bottom: 6px  !important; }
 
-.center-align {
-	margin-left: auto !important;
-	margin-right: auto !important;
-}
+.margin-top-sm { margin-top: 12px !important; }
+.margin-btm-sm { margin-bottom: 12px !important; }
 
-.margin-top-xs {
-	margin-top: 12px !important;
-}
+.margin-sm    { margin-top: 12px !important; margin-bottom: 12px !important; }
 
-.margin-btm-xs {
-	margin-bottom: 12px !important;
-}
+.margin-top-md { margin-top: 24px !important; }
+.margin-btm-md { margin-bottom: 24px !important; }
 
-.margin-top-sm {
-	margin-top: 24px !important;
-}
+.margin-top-lmd { margin-top: 30px !important; }
+.margin-btm-lmd { margin-bottom: 30px !important; }
 
-.margin-btm-sm {
-	margin-bottom: 24px !important;
-}
+.margin-top-lg { margin-top: 40px !important; }
+.margin-btm-lg { margin-bottom: 40px !important; }
 
-.margin-sm {
-	margin-top: 24px !important;
-	margin-bottom: 24px !important;
-}
+.margin-top-xl { margin-top: 80px !important; }
 
-.margin-top-md {
-	margin-top: 48px !important;
-}
-
-.margin-btm-md {
-	margin-bottom: 48px !important;
-}
-
-.margin-top-lmd {
-	margin-top: 60px !important;
-}
-
-.margin-btm-lmd {
-	margin-bottom: 60px !important;
-}
-
-.margin-top-lg {
-	margin-top: 80px !important;
-}
-
-.margin-btm-lg {
-	margin-bottom: 80px !important;
-}
-
-.margin-top-xl {
-	margin-top: 160px !important;
-}
-
-.padding-md {
-	padding: 15px !important;
-}
-
-.margin-xs-shrink {
-	margin-top: 1px !important;
-}
-
-.margin-cover {
-	margin-top: 180px;
-}
+.padding-md { padding: 15px !important; }
+.margin-xs-shrink { margin-top: 1px !important; }
+.margin-cover { margin-top: 180px; }
+/*
+================================
+	END OF MARGIN CLASSES
+================================
+*/
 
 /*
 ================================
