--- a/css/custom.css
+++ b/css/custom.css
@@ -182,6 +182,16 @@ p.news-text, .contact-text {
   line-height: 1.6;
 }
 
+.contact-text i,
+.contact-text .fa {
+  /* match the .fa-lg size (about 18px) */
+  font-size: 18px !important;
+  width: auto;
+  height: auto;
+  line-height: 1;
+}
+
+
 p.img-caption{
 	font-size: 16px;
 	line-height: 16px;
@@ -623,6 +633,18 @@ span.authors,
   line-height: 1.6;   /* match bio */
 }
 
+span.authors,
+span.paper-title,
+span.venue,
+.collapse p {
+  line-height: 1.6 !important;
+}
+
+span.authors {
+  margin-bottom: 0.4em;
+  display: block;
+}
+
 p.news-text { font-size: 18px; }
 span.paper-title,
 span.authors { font-size: 18px; }
@@ -642,3 +664,5 @@ a.cv {
   font-size: 18px !important;
   line-height: 1.6 !important;
 }
+
+
