--- a/css/custom.css
+++ b/css/custom.css
@@ -731,7 +731,7 @@ a.cv {
   height: auto;      /* keeps the original aspect ratio */
   margin-left: 4px;
   margin-top: 0;
-  border-radius: 0;  /* no more circle */
+  border-radius: 6px;  /* no more circle */
 }
 
 
