--- a/css/custom.css
+++ b/css/custom.css
@@ -723,6 +723,7 @@ a.cv {
   max-width: 300px;  /* or whatever maximum width you want */
   width: 100%;       /* so it scales down if needed */
   height: auto;      /* keeps the original aspect ratio */
+position: relative; /* enable left/right offsets */
   margin-left: -20px !important;
   margin-top: 0;
   border-radius: 6px;  /* no more circle */
